--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "brain.js": "^1.6.1",
+    "lib": "^3.0.2",
     "mongoose": "^5.4.7",
     "uuid": "^3.3.2"
   },
